# turboai_demo

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  README.md  docker-compose.deps.yml  docker-compose.prod.yml  docker-compose.yml  justfile  justfile.prod
.cursor/rules/: backend.mdc  frontend.mdc
.husky/: pre-commit
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  conftest.py  pyproject.toml
backend/accounts/: authentication.py  cache.py  models.py  schemas.py  serializers.py  signals.py  tests.py  tokens.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_email.py
backend/config/: settings.py  urls.py
backend/core/: exception_handler.py  schemas.py  tests.py  urls.py  utils.py  views.py
backend/notes/: admin.py  cache.py  defaults.py  managers.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
backend/notes/migrations/: 0001_initial.py  0002_remove_notehistory.py  0003_transcriptionusage.py
backend/notes/templates/admin/: transcription_usage_changelist.html
frontend/: AGENTS.md  CLAUDE.md  Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/public/: audio-processor.js
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  prose.css
frontend/src/app/dashboard/: Content.tsx  EmptyState.tsx  ErrorState.tsx  LogoutIconButton.tsx  (+11 more)
frontend/src/components/: AuthProvider.tsx  AuthenticatedLayout.tsx  CategoryRow.tsx  PageContainer.tsx  Sidebar.tsx  auth-provider.tsx  authenticated-layout.tsx  dashboard-content.tsx  login-form.tsx  page-container.tsx  register-form.tsx  sidebar.tsx
frontend/src/hooks/: useNoteSave.ts  useTranscription.ts
frontend/src/lib/: fonts.ts  query-client.ts  query-provider.tsx
frontend/src/services/: auth.ts  notes.ts  transcription.ts
frontend/src/stores/: auth-store.ts  category-filter-store.ts
frontend/src/types/: auth.ts  category.ts  note.ts
(+33 files in other folders)
